--- a/templates/auth/Login.html
+++ b/templates/auth/Login.html
@@ -13,22 +13,20 @@
         </div>
         <div class="card-body">
             <h3 class="text-center mb-4">Login</h3>
-            <form id="loginForm">
-                <div class="mb-3">
-                    <input type="email" class="form-control" id="email" placeholder="Correo electrónico" required>
-                </div>
-                <div class="mb-3">
-                    <input type="password" class="form-control" id="password" placeholder="Contraseña" required>
-                </div>
-                <div class="mb-3 form-check">
-                    <input type="checkbox" class="form-check-input" id="rememberMe">
-                    <label class="form-check-label" for="rememberMe">Recordarme</label>
-                </div>
-                <button type="submit" id="btnLogin" class="btn btn-primary w-100 mb-3">Sign in</button>
-                <div class="text-center">
-                    <a href="#" class="forgot-password">¿Olvidaste tu contraseña?</a>
-                </div>
-            </form>
+            <div class="mb-3">
+                <input type="text" class="form-control" id="txt_username" placeholder="Username">
+            </div>
+            <div class="mb-3">
+                <input type="password" class="form-control" id="txt_password" placeholder="Password">
+            </div>
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="rememberMe">
+                <label class="form-check-label" for="rememberMe">Recordarme</label>
+            </div>
+            <button id="btnLogin" class="btn btn-primary w-100 mb-3">Sign in</button>
+            <div class="text-center">
+                <a href="#" class="forgot-password">¿Olvidaste tu contraseña?</a>
+            </div>
         </div>
     </div>
     <div class="login-footer">
