--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <link href="/static/lib/fontawesome/css/all.css" rel="stylesheet">
     <title>{% block title %}{% endblock title %}</title>
 </head>
-<body>
+<body class="dark-theme">
     {% block content %}{% endblock content %}
 
     <script src="/static/lib/jquery-3.7.1.js"></script>
