--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/static/lib/bootstrap.min.css" rel="stylesheet">
     <link href="/static/lib/fontawesome/css/all.css" rel="stylesheet">
+    <link href="/static/css/base.css" rel="stylesheet">
     <title>{% block title %}{% endblock title %}</title>
 </head>
 <body class="dark-theme">
