mi archivo de cambios y ahora inicio de sidebar funciona xddddddddddd

--- a/templates/components/sidebar.html
+++ b/templates/components/sidebar.html
@@ -12,7 +12,7 @@
         </button>
     </div>
     <div class="side-menu-content">
-        <a href="#" class="side-menu-item">
+        <a href="/" class="side-menu-item">
             <i class="fas fa-home"></i>
             <span class="menu-item">Inicio</span>
         </a>
