--- a/templates/Categoria.html
+++ b/templates/Categoria.html
@@ -5,10 +5,65 @@
 {% block content %}
 
 <link rel="stylesheet" href="/static/css/Inicio.css">
-
 {% include 'components/sidebar.html' %}
 
-
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-md-6 mb-4">
+            <div class="card">
+                <div class="card-header">
+                    <h2 class="mb-0"><i class="fas fa-layer-group me-2"></i>Nueva Categoria</h2>
+                </div>
+                <div class="card-body">
+                    <div class="mb-3">
+                        <label class="form-label">Nombre</label>
+                        <input type="text" class="form-control" id="txt_nombre">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Estado</label> <br>
+                        <label class="theme-switch-toggle">
+                            <input type="checkbox" id="chk_status" checked>
+                            <span class="theme-switch-slider"></span>
+                        </label>
+                    </div>
+                    <button type="submit" class="btn btn-primary w-100">Agregar Categoria</button>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 mb-4">
+            <div class="card">
+                <div class="card-header">
+                    <h3 class="mb-0"><i class="fas fa-list-ul me-2"></i>Categorias</h3>
+                </div>
+                <div class="card-body">
+                    <ul id="categorias" class="list-group">
+                        <li class="list-group-item">
+                            Salario
+                            <span>
+                                <i class="fas fa-plus text-success me-2"></i>
+                                <span class="badge bg-success">+$2,500.00</span>
+                            </span>
+                        </li>
+                        <li class="list-group-item">
+                            Alquiler
+                            <span>
+                                <i class="fas fa-minus text-danger me-2"></i>
+                                <span class="badge bg-danger">-$800.00</span>
+                            </span>
+                        </li>
+                        <li class="list-group-item">
+                            Compras supermercado
+                            <span>
+                                <i class="fas fa-minus text-danger me-2"></i>
+                                <span class="badge bg-danger">-$150.00</span>
+                            </span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock content %}
 
