ya itera entre las categorias, como diablo hago que se muestre el html?

--- a/templates/Categoria.html
+++ b/templates/Categoria.html
@@ -26,7 +26,7 @@
                             <span class="theme-switch-slider"></span>
                         </label>
                     </div>
-                    <button type="submit" class="btn btn-primary w-100">Agregar Categoria</button>
+                    <button id="addcategory" type="submit" class="btn btn-primary w-100">Agregar Categoria</button>
                 </div>
             </div>
         </div>
