--- a/templates/Categoria.html
+++ b/templates/Categoria.html
@@ -36,29 +36,7 @@
                     <h3 class="mb-0"><i class="fas fa-list-ul me-2"></i>Categorias</h3>
                 </div>
                 <div class="card-body">
-                    <ul id="categorias" class="list-group">
-                        <li class="list-group-item">
-                            Salario
-                            <span>
-                                <i class="fas fa-plus text-success me-2"></i>
-                                <span class="badge bg-success">+$2,500.00</span>
-                            </span>
-                        </li>
-                        <li class="list-group-item">
-                            Alquiler
-                            <span>
-                                <i class="fas fa-minus text-danger me-2"></i>
-                                <span class="badge bg-danger">-$800.00</span>
-                            </span>
-                        </li>
-                        <li class="list-group-item">
-                            Compras supermercado
-                            <span>
-                                <i class="fas fa-minus text-danger me-2"></i>
-                                <span class="badge bg-danger">-$150.00</span>
-                            </span>
-                        </li>
-                    </ul>
+                    <ul id="categorias" class="list-group"></ul>
                 </div>
             </div>
         </div>
