--- a/static/css/Inicio.css
+++ b/static/css/Inicio.css
@@ -45,6 +45,18 @@ body {
     box-shadow: 0 4px 10px rgba(74, 144, 226, 0.3);
 }
 
+.btn-danger {
+    border-radius: 50px;
+    padding: 10px 20px;
+    font-weight: bold;
+    transition: all 0.3s ease;
+}
+
+.btn-danger:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 4px 10px rgba(226, 81, 74, 0.3);
+}
+
 .form-control,
 .form-select {
     background-color: var(--input-background);
