--- a/templates/Categoria.html
+++ b/templates/Categoria.html
@@ -27,6 +27,7 @@
                         </label>
                     </div>
                     <button id="addcategory" type="submit" class="btn btn-primary w-100">Agregar Categoria</button>
+                    <button id="cleanButton" type="submit" class="btn btn-danger w-100 mt-2">Cancelar</button>
                 </div>
             </div>
         </div>
