--- a/templates/Categoria.html
+++ b/templates/Categoria.html
@@ -26,8 +26,9 @@
                             <span class="theme-switch-slider"></span>
                         </label>
                     </div>
-                    <button id="addcategory" type="submit" class="btn btn-primary w-100">Agregar Categoria</button>
-                    <button id="cleanButton" type="submit" class="btn btn-danger w-100 mt-2">Cancelar</button>
+                    <button id="addcategory" type="submit" class="btn btn-primary w-100"><i class="fa-solid fa-plus"></i> Agregar Categoria</button>
+                    <button id="editcategory" type="submit" class="btn btn-primary w-100 d-none"><i class="fa-solid fa-pen-to-square"></i> Editar Categoria</button>
+                    <button id="cleanButton" type="submit" class="btn btn-danger w-100 mt-2"><i class="fa-solid fa-ban"></i> Cancelar</button>
                 </div>
             </div>
         </div>
