--- a/templates/base.html
+++ b/templates/base.html
@@ -1,20 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/static/lib/bootstrap.min.css" rel="stylesheet">
     <link href="/static/lib/fontawesome/css/all.css" rel="stylesheet">
     <link href="/static/css/base.css" rel="stylesheet">
+    <link rel="stylesheet" href="/static/css/sidebar.css">
     <title>{% block title %}{% endblock title %}</title>
 </head>
+
 <body class="dark-theme">
+    <button class="menu-toggle" id="menuToggle">
+        <i class="fas fa-bars"></i>
+    </button>
+
+    <div class="side-menu" id="sideMenu">
+        <div class="side-menu-header">
+            <span>Menú</span>
+            <button class="side-menu-close" id="menuClose">
+                <i class="fas fa-times"></i>
+            </button>
+        </div>
+        <div class="side-menu-content">
+            <a href="/" class="side-menu-item">
+                <i class="fas fa-home"></i>
+                <span class="menu-item">Inicio</span>
+            </a>
+            <a href="#" class="side-menu-item">
+                <i class="fas fa-chart-bar"></i>
+                <span class="menu-item">Estadísticas</span>
+            </a>
+            <a href="/Categoria" class="side-menu-item">
+                <i class="fas fa-layer-group"></i>
+                <span class="menu-item">Categorias</span>
+            </a>
+            <div class="theme-switch">
+                <span>Modo oscuro</span>
+                <label class="theme-switch-toggle">
+                    <input type="checkbox" id="themeSwitch" checked>
+                    <span class="theme-switch-slider"></span>
+                </label>
+            </div>
+            <a onclick="Logout();" class="cursor-pointer side-menu-item">
+                <i class="fas fa-sign-out-alt"></i> <span class="menu-item">Cerrar sesión</span>
+            </a>
+        </div>
+    </div>
     {% block content %}{% endblock content %}
 
     <script src="/static/lib/jquery-3.7.1.js"></script>
     <script src="/static/lib/bootstrap.bundle.min.js"></script>
     <script src="/static/lib/fontawesome/js/all.js"></script>
     <script src="/static/lib/tools.js"></script>
+    <script src="/static/scripts/sidebar.js"></script>
     {% block scripts %}{% endblock scripts %}
 </body>
+
 </html>
