--- a/templates/base.html
+++ b/templates/base.html
@@ -28,9 +28,9 @@
                 <i class="fas fa-home"></i>
                 <span class="menu-item">Inicio</span>
             </a>
-            <a href="#" class="side-menu-item">
-                <i class="fas fa-chart-bar"></i>
-                <span class="menu-item">Estadísticas</span>
+            <a href="/GastosIngresos" class="side-menu-item">
+                <i class="fas fa-exchange-alt"></i>
+                <span class="menu-item">Gastos e Ingresos</span>
             </a>
             <a href="/Categoria" class="side-menu-item">
                 <i class="fas fa-layer-group"></i>
@@ -51,6 +51,7 @@
     {% block content %}{% endblock content %}
 
     <script src="/static/lib/jquery-3.7.1.js"></script>
+    <script src="/static/lib/jquery.mask.min.js"></script>
     <script src="/static/lib/bootstrap.bundle.min.js"></script>
     <script src="/static/lib/fontawesome/js/all.js"></script>
     <script src="/static/lib/tools.js"></script>
