--- a/templates/base.html
+++ b/templates/base.html
@@ -28,13 +28,13 @@
                 <i class="fas fa-home"></i>
                 <span class="menu-item">Inicio</span>
             </a>
-            <a href="/GastosIngresos" class="side-menu-item">
-                <i class="fas fa-exchange-alt"></i>
-                <span class="menu-item">Gastos e Ingresos</span>
-            </a>
             <a href="/Categoria" class="side-menu-item">
                 <i class="fas fa-layer-group"></i>
                 <span class="menu-item">Categorias</span>
+            </a>
+            <a href="/Billetera" class="side-menu-item">
+                <i class="fas fa-wallet"></i>
+                <span class="menu-item">Billeteras</span>
             </a>
             <div class="theme-switch">
                 <span>Modo oscuro</span>
