--- a/static/css/base.css
+++ b/static/css/base.css
@@ -132,16 +132,6 @@ body {
     border-radius: 50px;
 }
 
-.balance-card {
-    background: linear-gradient(135deg, var(--primary-color), #7f5a83);
-    color: white;
-}
-
-.balance-amount {
-    font-size: 2.5rem;
-    font-weight: bold;
-}
-
 input:checked+.theme-switch-slider {
     background-color: var(--primary-color);
 }
@@ -152,4 +142,12 @@ input:checked+.theme-switch-slider:before {
 
 .cursor-pointer {
     cursor: pointer;
+}
+
+.form-select {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='%23333333' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
+}
+
+.dark-theme .form-select {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='%23ffffff' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
 }
