--- a/templates/Inicio.html
+++ b/templates/Inicio.html
@@ -29,6 +29,7 @@
     }
     
     .transactions-container {
+        height: calc(2 * (3.5rem + 2rem)) !important;
         max-height: calc(2 * (3.5rem + 2rem)) !important;
         overflow-y: auto;
     }
