--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,22 @@
                 <i class="fas fa-wallet"></i>
                 <span class="menu-item">Billeteras</span>
             </a>
+            <div class="side-menu-dropdown">
+                <div class="side-menu-item dropdown-toggle" data-bs-toggle="collapse" data-bs-target="#reportesMenu">
+                    <i class="fas fa-chart-bar"></i>
+                    <span class="menu-item">Reportes</span>
+                </div>
+                <div class="collapse" id="reportesMenu">
+                    <!-- <a href="/Reportes/Mensual" class="side-menu-subitem">
+                        <i class="fas fa-calendar-alt"></i>
+                        <span class="menu-item">Reporte Mensual</span>
+                    </a>
+                    <a href="/Reportes/Categoria" class="side-menu-subitem">
+                        <i class="fas fa-chart-pie"></i>
+                        <span class="menu-item">Reporte por Categoría</span>
+                    </a> -->
+                </div>
+            </div>
             <div class="theme-switch">
                 <span>Modo oscuro</span>
                 <label class="theme-switch-toggle">
