terminando el reporte (la billetera 0 me lo puso dificil pero weno)

--- a/templates/base.html
+++ b/templates/base.html
@@ -42,14 +42,10 @@
                     <span class="menu-item">Reportes</span>
                 </div>
                 <div class="collapse" id="reportesMenu">
-                    <!-- <a href="/Reportes/Mensual" class="side-menu-subitem">
-                        <i class="fas fa-calendar-alt"></i>
-                        <span class="menu-item">Reporte Mensual</span>
-                    </a>
-                    <a href="/Reportes/Categoria" class="side-menu-subitem">
+                    <a href="/ReporteCompleto" class="side-menu-subitem">
                         <i class="fas fa-chart-pie"></i>
-                        <span class="menu-item">Reporte por Categoría</span>
-                    </a> -->
+                        <span class="menu-item">Reporte Completo</span>
+                    </a>
                 </div>
             </div>
             <div class="theme-switch">
